--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,9 @@ html {
   /* color: #CFD8DC; */
   color: #CFD8DC;
 }
+.license {
+  font-size: 7px! important;
+}
 
 body {
   overflow-x: hidden;
@@ -145,4 +148,7 @@ div.carousel-inner {
   margin-bottom: 3em !important;
   box-shadow: 5px 5px 5px grey;
   background-color: #CFD8DC
+}
+#sidebar .license {
+  font-size: 7px! important;
 }
